# gomoku

./: CMakeLists.txt  README.md  gomoku.cpp  gomoku.h  main.cpp
